--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 
 </head>
 <body>
-    <h1 style="text-align: center;">Ishaq Khan Rind Baloch</h1>
+<div class="hero">
+  <h5 class="margin-top text-color">
+Best Destinations around the world
+  </h5>
+<h1>
+  Travel, enjoy and live a new and full life
+</h1>
+<p>
+  Built Wicket longer admire do barton vanity itself do in it. <br>
+  preferred to sportsman it engrossed listning. Park gote <br>
+  sell they west hard for the.
+</p>
+<div class="btn-section">
+<button>Find out more</button>
+<button><img src="" alt="">Play Demo</button>
+
+</div>
+</div>
 </body>
 </html>
