--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
   <h5 class="margin-top text-color">
 Best Destinations around the world
   </h5>
-<h1>
+<h1 class="hero-heading">
   Travel, enjoy and live a new and full life
 </h1>
-<p>
+<p class="hero-text"> 
   Built Wicket longer admire do barton vanity itself do in it. <br>
   preferred to sportsman it engrossed listning. Park gote <br>
   sell they west hard for the.
 </p>
 <div class="btn-section">
-<button>Find out more</button>
-<button><img src="" alt="">Play Demo</button>
+<a class="find-more" href="">Find out more</a>
+<a class="demo-btn" href=""><img src="images/play-button.png" alt="play-button" />
+  Play Demo</a>
 
 </div>
 </div>
