--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div class="forma">
+    <!-- <div class="forma">
       <table style="width: 100%; table-layout:fixed">
         <tr>
           <td class="jadoo">Jadoo</td>
@@ -23,6 +23,21 @@
           <td><button class="button">Sign up</button></td>
         </tr>
       </table>
-    </div>
+    </div> -->
+
+
+    <nav class="navbar">
+  <div class="logo">Jadoo</div>
+  <ul class="nav-links">
+    <li><a href="#">Destinations</a></li>
+    <li><a href="#">Hotels</a></li>
+    <li><a href="#">Flights</a></li>
+    <li><a href="#">Booking</a></li>
+    <li><a href="#">Login</a></li>
+    <li><button class="button">Sign up</button></li>
+    <li><a href="#">Eng</a></li>
+  </ul>
+</nav>
+
 </body>
 </html>
