--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 <div class="hero">
+  <picture>
+    
+  </picture>
   <h5 class="margin-top text-color">
 Best Destinations around the world
   </h5>
