--- a/index.html
+++ b/index.html
@@ -1,43 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel Agency</title>
-     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-      <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Destinations</title>
+  
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 
 </head>
 <body>
-    <!-- <div class="forma">
-      <table style="width: 100%; table-layout:fixed">
-        <tr>
-          <td class="jadoo">Jadoo</td>
-          <td colspan="2"></td>
-          <td><a href="">Desitnations</a></td>
-          <td><a href="">Hotels</a></td>
-          <td><a href="">Flights</a></td>
-          <td><a href="">Booking</a></td>
-          <td><a href="">Login</a></td>
-          <td><button class="button">Sign up</button></td>
-        </tr>
-      </table>
-    </div> -->
+  
+
+<div class="main-destination-container">
+    <div class="inner-destinaton">
+        <div class="heading-main">
+            <h6>Top Selling</h6>
+            <h2>Top Destinations</h2>
+        </div>
+        <div class="all-box003">
+            <div class="box box11">
+                <div class="image005 img112">
+                    <img src="images/32e1459ae49e57046b9c9bf320fe245919168bb0.png" alt="">
+                </div>
+                <div class="data223">
+                    <div class="price_name">
+                        <span class="location">Rome, Italty</span>
+                        <span class="price11">$5.42K</span>
+                    </div>
+                    <div class="svg_days">
+                        <span><img src="images/Vector.svg" alt="arrows"></span><span class="time22">28 Days Trip</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box box12">
+                <div class="image005 img113">
+                    <img src="images/599d5437ff6f71a7522170940c3ac66332ac8d2f.jpg" alt="">
+                </div>
+                <div class="data223">
+                    <div class="price_name">
+                        <span class="location">London, UK</span>
+                        <span class="price11">$6.00K</span>
+                    </div>
+                    <div class="svg_days">
+                        <span><img src="images/Vector.svg" alt="arrows"></span><span class="time22">12 Days Trip</span>
+                    </div>
+                </div>
+            </div>
+            <div class="box box13">
+                <div class="image005 img114">
+                    <img src="images/1119f8e879b2e4cb46bd33155639a62530f9a579.png" alt="">
+                </div>
+                <div class="data223">
+                    <div class="price_name">
+                        <span class="location">Full Europe</span>
+                        <span class="price11">$7.00K</span>
+                    </div>
+                    <div class="svg_days">
+                        <span><img src="images/Vector.svg" alt="arrows"></span><span class="time22">28 Days Trip</span>
+                    </div>
+                </div>
+            </div>
+            <div class="decore">
+            <img src="images/Decore.svg" alt="Decoration">
+        </div>
+        </div>
+        
+    </div>
+</div>
 
 
-    <nav class="navbar">
-  <div class="logo">Jadoo</div>
-  <ul class="nav-links">
-    <li><a href="#">Destinations</a></li>
-    <li><a href="#">Hotels</a></li>
-    <li><a href="#">Flights</a></li>
-    <li><a href="#">Booking</a></li>
-    <li><a href="#">Login</a></li>
-    <li><button class="button">Sign up</button></li>
-    <li><a href="#">Eng</a></li>
-  </ul>
-</nav>
+
+
 
 </body>
 </html>
